# vercel

./: .gitignore  .python-version  .venv  README.md  pyproject.toml  server  vercel.json
server/api/: admin.py  models.py  serializers.py  urls.py  views.py
server/api/migrations/: 0001_initial.py  0002_alter_user_body_fat_alter_user_weight.py  0003_alter_profile_fk_diet_alter_profile_fk_nutrition.py  0004_diet_photo_url_food_photo_url.py  0005_mealplan_foods.py  0006_user_blood_pressure_user_heart_rate_and_more.py
server/api/utils/: __init__.py  lang.py  password.py  validators.py  view.py
server/server/: settings.py  urls.py
